# bastille-installer

./: .gitignore  .gitlab-ci.yml  Cargo.toml  README.md
.github/workflows/: on_push.yml
bastille-base/: bastille-installer.pkr.hcl  bastille-installer.pkr.hcl (copier 1).vjy2  run.py
bastille-base/files/: user_disk_layout.json  vars.sh
bastille-base/old/: partition-ext4-lbios.sh  setup.sh.vjy
bastille-base/scripts/: base.sh  bootloader.sh  cleanup.sh  configure-qemu.sh  configure-shared.sh  configure-virtualbox.sh  liveVM.sh  pacman.sh  partition-btrfs-efi.sh  partition-btrfs-lbios.sh  partition-ext4-efi.sh  partition-ext4-lbios.sh  partition-table-gpt.sh  partition-table-mbr.sh  partitions.sh  setup.sh  tables.sh  virtualbox.sh
bastille-base/srv/: cfg_liveVM.sh  id_bas.pub  vars.sh
bastille-base/templates/: vagrantfile.tpl
bastille-base/tmp/: setup.sh
bastillebox-base/: bastillebox-installer.pkr.hcl
bastillebox-base/files/: packer-archlinux.py
bastillebox-base/scripts/: liveVM.sh  mirrors.sh
bastillebox-base/templates/: vagrantfile.tpl
bib-base/: SE_bastille-installer-box.pkr.hcl  SE_bastille-installerr-box.pkr.hcl.vjy  bastillebox-installer.pkr.hcl  create-vm  run-vm  run.py  setup-vm  start-vm  test.sh  vars.sh
bib-base/boot/: grub.cfg
bib-base/scripts/: base.sh  bootloader.sh  (+9 more)
mai-base/: manjaro-arm-installer.pkr.hcl  run.py  run.sh  safenetwork-community-installer.pkr.hcl  safenetwork-community-installer.pkr.hcl.vjy  wrapacker
sci-base/: run.py  scarf-installer.hcl.pkr.vjy  scarf-installer.pkr-hcl
src/: manjaro-arm-installer.pkr.hcl
(+60 files in other folders)
