[package]
name = "bib-base"
version = "0.1.0"
edition = "2021"
authors = ["Folât Pjêrsômêj"]
default-run = "create-vm"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "create-vm"
path = "src/create-vm/bin/main.rs"

[[bin]]
name = "start-vm"
path = "src/start-vm/bin/main.rs"

[[bin]]
name = "run-vm"
path = "src/run-vm/bin/main.rs"

[dependencies]
const_format = { version = "0.2", features = ["rust_1_64"]}
simple-home-dir = "0.2.0"

[profile.release]
strip = true
